# todo-txt

./: .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: serialization.rs  simple.rs
fuzz/: Cargo.toml
fuzz/fuzzers/: parse_task.rs
src/: color.rs  config.rs  date.rs  errors.rs  lib.rs  parser.rs  priority.rs  task.rs
src/task/: extended.rs  extra.rs  list.rs  mod.rs  note.rs  period.rs  recurrence.rs  simple.rs
tests/: extended.rs  extra.rs  parser.rs  period.rs  recurrence.rs  task.rs
