[package]
name = "todo-txt"
version = "1.2.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
description = "Parser for the todo.txt format"
license = "MIT"
keywords = ["parser", "todotxt"]
repository = "https://github.com/sanpii/todo-txt"
readme = "README.md"
edition = "2018"

[dependencies]
chrono = "^0.4"
lazy_static = "^1.0"
nom = "^4.0"
regex = "^1.0"

[dependencies.log]
version = "^0.4"
optional = true

[dependencies.rand]
version = "^0.6"
optional = true

[dependencies.serde]
version = "^1.0"
optional = true

[dependencies.serde_derive]
version = "^1.0"
optional = true

[dev-dependencies]
serde_json = "^1.0"

[dev-dependencies.chrono]
version = "^0.4"
default-features = false
features = ["serde"]

[[example]]
name = "serialization"
required-features = ["serde-support"]

[badges]
travis-ci = { repository = "sanpii/todo-txt", branch = "master" }
gitlab = { repository = "sanpi/todo-txt", branch = "master" }

[features]
default = []
serde-support = ["serde", "serde_derive", "chrono/serde"]
extended = ["log", "rand"]
