[package]
name = "todo-txt"
version = "3.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
description = "Parser for the todo.txt format"
license = "MIT"
keywords = ["parser", "todotxt"]
repository = "https://github.com/sanpii/todo-txt"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
nom = "^7.0"
regex = "^1.0"
thiserror = "2.0"

[dependencies.chrono]
version = "0.4.23"
features = ["clock", "std"]
default-features = false

[dependencies.log]
version = "^0.4"
optional = true

[dependencies.rand]
version = "^0.8"
optional = true

[dependencies.serde]
version = "^1.0"
optional = true

[dependencies.serde_derive]
version = "^1.0"
optional = true

[dev-dependencies]
serde_json = "^1.0"

[dev-dependencies.chrono]
version = "^0.4"
default-features = false

[[example]]
name = "serialization"
required-features = ["serde-support"]

[features]
default = []
serde-support = ["serde", "serde_derive", "chrono/serde"]
extended = ["log", "rand"]
