[package]
name = "todo-txt"
version = "3.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
description = "Parser for the todo.txt format"
license = "MIT"
keywords = ["parser", "todotxt"]
repository = "https://github.com/sanpii/todo-txt"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
nom = "7.0"
regex = "1.0"
thiserror = "2.0"

[dependencies.envir]
version = "1.0"
features = ["extrapolation", "serde"]
optional = true

[dependencies.chrono]
version = "0.4"
features = ["clock", "std"]
default-features = false

[dependencies.log]
version = "0.4"
optional = true

[dependencies.owo-colors]
version = "4.0"
features = ["supports-colors"]
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies]
serde_json = "1.0"

[[example]]
name = "serialization"
required-features = ["serde"]
doc-scrape-examples = true

[features]
default = []
config = ["envir", "owo-colors"]
extended = ["log", "rand"]
serde = ["dep:serde", "chrono/serde"]

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
